<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".WelcomeScreenDataBinding">

        <import type="android.view.View" />

        <variable
            name="userPreferences"
            type="com.mendelin.catpedia.preferences.UserPreferences" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".ui.activity.WelcomeScreenActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/application_logo"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_700_bold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtAppDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_500_medium"
                android:gravity="center"
                android:text="@string/app_description"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="@{userPreferences.userIsLogged ? View.VISIBLE : View.GONE}" />

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/montserrat_400_regular"
                android:text="@string/welcome_screen_user_name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="@{userPreferences.userIsLogged ? View.GONE : View.VISIBLE}" />

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:visibility="@{userPreferences.userIsLogged ? View.GONE : View.VISIBLE}" />

            <TextView
                android:id="@+id/txtUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/montserrat_400_regular"
                android:text="@string/welcome_screen_password"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="@{userPreferences.userIsLogged ? View.GONE : View.VISIBLE}" />

            <EditText
                android:id="@+id/editUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:visibility="@{userPreferences.userIsLogged ? View.GONE : View.VISIBLE}" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/FlatButtonBlack"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:text="@string/welcome_screen_btn_login"
                android:visibility="@{userPreferences.userIsLogged ? View.GONE : View.VISIBLE}" />

        </LinearLayout>

    </ScrollView>

</layout>