<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".BreedInfoDataBinding">

        <import type="android.view.View" />

        <variable
            name="args"
            type="com.mendelin.catpedia.ui.fragments.BreedInfoFragmentArgs" />
    </data>

    <ScrollView
        android:id="@+id/scrollviewBreedInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:fillViewport="true"
        android:scrollbars="vertical"
        tools:context=".ui.fragments.BreedInfoFragment">

        <LinearLayout
            android:id="@+id/layoutPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="320dp">

                <!-- Breed image -->
                <ImageView
                    android:id="@+id/imgCat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:adjustViewBounds="true"
                    android:transitionName="catImage"
                    app:catImage="@{args.imageUrl}"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <!-- Back button -->
                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_circle"
                    android:src="@drawable/ic_backward" />

            </FrameLayout>

            <!-- Breed name -->
            <TextView
                style="@style/BreedInfoTitle"
                android:text="@string/breed_info_name" />

            <TextView
                android:id="@+id/txtBreedName"
                style="@style/BreedInfoContent"
                android:text="@{args.name}"
                tools:text="Abyssinian" />

            <!-- Breed description -->
            <TextView
                style="@style/BreedInfoTitle"
                android:text="@string/breed_info_description" />

            <TextView
                android:id="@+id/txtBreedDescription"
                style="@style/BreedInfoContent"
                android:text="@{args.description}"
                tools:text="The Abyssinian is easy to care for, and a joy to have in your home. They’re affectionate cats and love both people and other animals." />

            <!-- Breed country -->
            <TextView
                style="@style/BreedInfoTitle"
                android:text="@string/breed_info_country" />

            <TextView
                android:id="@+id/txtBreedCountry"
                style="@style/BreedInfoContent"
                android:text="@{args.country}"
                tools:text="EG (Egypt)" />

            <!-- Breed temperament -->
            <TextView
                style="@style/BreedInfoTitle"
                android:text="@string/breed_info_temperament" />

            <TextView
                android:id="@+id/txtBreedTemperament"
                style="@style/BreedInfoContent"
                android:text="@{args.temperament}"
                tools:text="Active, Energetic, Independent, Intelligent, Gentle" />

            <!-- Breed Wikipedia link -->
            <TextView
                android:id="@+id/titleBreedWikipediaLink"
                style="@style/BreedInfoTitle"
                android:text="@string/breed_info_wikipedia"
                android:visibility="@{args.link.empty ? View.GONE : View.VISIBLE}" />

            <TextView
                android:id="@+id/txtBreedWikipediaLink"
                style="@style/BreedInfoContent"
                android:autoLink="web"
                android:text="@{args.link}"
                android:textColorLink="@android:color/holo_blue_dark"
                android:visibility="@{args.link.empty ? View.GONE : View.VISIBLE}"
                tools:text="https://en.wikipedia.org/wiki/Abyssinian_(cat)" />

            <View
                android:layout_width="match_parent"
                android:layout_height="32dp" />

        </LinearLayout>

    </ScrollView>

</layout>